src/components/projects/projects.css
h1 {
  margin-top: 200px;
}

h2 {
  color: yellow;
  margin: 100px 30px 0 auto;
  font-size: 30px;
}

p, p.p2 {
  width: 80vw;
  margin: 0 auto;
  font-size: 25px;
  font-weight: 300;
  color: white;
  max-width: 600px;
  text-align: justify;
}

p.p2 {
  margin: 0 auto 130px auto;
  font-size: 180%;
}

p.p2.desc {
  padding: 10px 0 35px 30px;
  font-size: 25px;
}

p.p2.stack {
  padding: 0 20px;
  font-size: 25px;
  margin-top: -150px;
  margin-left: 30px;
}

p.p2.stack li {
  list-style-type: circle;
}

blockquote {
  margin-top: 5px;
}

.project-block {
  display: inline-block;
  /* margin: 30px auto 150px 80px; */
  margin-bottom: 180px;
}

.project-title {
  margin: 150px auto 50px auto;
  padding-top: 60px;
  color: white;
  font-size: 40px;
  font-weight: 400;
}

.project-image {
  display: inline-block;
  margin-left: -15px;
  height:  280px;
}

.project-desc {
  display: inline-block;
  margin: -100px 10px 0 10px;
}

.logo-icon {
  height: 350px;
  width:350px;
  display: inline-block;
  padding-top: 60px;
  margin-bottom: 1px;
}

.project-image img {
  height: 450px;
  margin-top: 60px;
  margin-bottom: -110px;
}


.project-image.ccs img {
  height: 450px;
  margin-top: 60px;
  margin-bottom: -200px;
}

.project-image.app img {
  height: 340px;
  margin-left: 10px;
}

.project-button button{
  float: left;
  margin-left: 100px;
  margin-top: -100px;
  margin-bottom: -100px;
}

.repo-button button {
  float: right;
  margin-right: 100px;
  margin-top: -100px;
  margin-bottom: -100px;
}

#projects {
  margin: 50px auto 0 auto;
  background-color: #0b4c84d9;
}

#project_img {
  float: left;
  margin: 5em 5em 3em -2em;
  padding: 1em;
  width: 450px;
  height: 450px;
  clear: right;
}

#pipe {
  color: yellow;
  font-size: 150%;
  margin-top: 2px;
  font-weight: 100;
}

@media only screen and (max-width: 600px) {

  .project-block {
    margin: -80px auto 150px auto;
  }

  .project-image img {
    height: 220px;
    padding-top: 10px;
  }

  .project-image.ccs img {
    padding-bottom: 200px;
    height: 280px;
  }

  .project-image.app img {
      height: 190px;
      margin-left: 0;
  }

  p, p.p2 {
    text-align: start;
  }


  .project-button button {
    margin: 0;
  }

  .repo-button button {
    margin: 0 20px 0 0;
  }
  
}

@media only screen and (max-width: 1024px) {

  .project-image img {
    padding-bottom: 130px;
    height: 320px;
  }

  .project-image.ccs img {
    padding-bottom: 200px;
    height: 280px;
  }

}

@media only screen and (max-width: 400px) {

  .project-image.ccs img, .project-image.app img {
    height: 180px;
  }

}

